[package]
name = "blooket-engine"
version = "1.0.0"
edition = "2021"
description = "High-speed Blooket automation engine — WebSocket + HTTP core"

[[bin]]
name = "blooket-engine"
path = "src/main.rs"

[lib]
name = "blooket_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
colored = "2"
indicatif = "0.17"
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
